fix a design issue with a missaligned header

--- a/app/assets/stylesheets/retos-publicos/_entry.scss
+++ b/app/assets/stylesheets/retos-publicos/_entry.scss
@@ -6,6 +6,10 @@
   margin: 0px;
 }
 
+.header-entry-first {
+  margin-left: 1em;
+}
+
 .text-white {
   color: white;
 }
